Added previous editors
And corrected redirecting editor company links while at it

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -47,15 +47,30 @@
               { name: "Matt King", 
               mailto: "mattking@us.ibm.com",
                   company: "IBM Corporation", companyURI:
-                  "http://www.ibm.com" },
+                  "http://www.ibm.com/" },
               { name: "James Nurthen", 
               mailto: "james.nurthen@oracle.com",
                   company: "Oracle Corporation", companyURI:
-                  "http://www.oracle.com" },
+                  "http://www.oracle.com/" },
               { name: "Michael Cooper", url: 'http://www.w3.org/People/cooper/',
               mailto: "cooper@w3.org",
                   company: "W3C", companyURI:
-                  "http://www.w3.org" },
+                  "http://www.w3.org/" },
+        { name: "Joseph Scheuhammer",
+          company: "Inclusive Design Research Centre, OCAD University",
+          companyURI: "http://idrc.ocad.ca/", 
+          note: "Previous Editor"
+        },
+        { name: "Lisa Pappas",
+          company: "SAS",
+          companyURI: "http://www.sas.com/", 
+          note: "Previous Editor"
+        },
+        { name: "Rich Schwerdtfeger",
+          company: "IBM Corporation",
+          companyURI: "http://ibm.com/", 
+          note: "Previous Editor"
+        },
               ],
 
           // authors, add as many as you like. 
