Added click event to the slider to move the slider
Clicking the mouse near the rail will move the slider to that position

--- a/examples/slider/slider-1.html
+++ b/examples/slider/slider-1.html
@@ -16,15 +16,17 @@
       <h2>Slider Example 1: A Simple Sliders</h2>
       
       <div class="aria-widget-slider">
-        <div class="rail" style="width: 300px"></div>
-        <div class="thumb" aria-valuemin="0" aria-valuenow="100" aria-valuemax="100" aria-label="Slider 1"></div>
-        <div class="value">100</div>
+        <div class="rail" style="width: 300px">
+          <div class="thumb" aria-valuemin="0" aria-valuenow="100" aria-valuemax="100" aria-label="Slider 1"></div>
+        </div>
+        <div class="value">0</div>
       </div>
 
       <div class="aria-widget-slider">
-        <div class="rail" style="width: 15em"></div>
-        <div class="thumb" aria-valuemin="0" aria-valuenow="100" aria-valuemax="200" aria-label="Slider 2"></div>
-        <div class="value">100</div>
+        <div class="rail" style="width: 15em">
+          <div class="thumb" aria-valuemin="0" aria-valuenow="100" aria-valuemax="200" aria-label="Slider 2"></div>
+        </div>
+        <div class="value">0</div>
       </div>
       
     </div>
