fixed bug in tabel naming

--- a/examples/slider/slider-1.html
+++ b/examples/slider/slider-1.html
@@ -109,9 +109,9 @@
     </table>
     
     
-    <h2 id="id_kbd">AT Testing Results</h2>
+    <h2 id="id_att">AT Testing Results</h2>
 
-    <table aria-labelledby="id_rps"> 
+    <table aria-labelledby="id_att"> 
       <thead>
         <tr>
           <th>Browser</th>
