Changed "element" to "component" in table heading

--- a/examples/slider/slider-1.html
+++ b/examples/slider/slider-1.html
@@ -76,7 +76,7 @@
         <tr>
           <th>Role</th>
           <th>Property/State</th>
-          <th>Element</th>
+          <th>Component</th>
           <th>Usage</th>
         </tr>
       </thead>
