Updated description of where the box is visually

--- a/examples/slider/slider-1.html
+++ b/examples/slider/slider-1.html
@@ -16,7 +16,7 @@
   <main role="main">
 
     <h1>Color Picker Using Slider Widgets</h1>
-    <p>Change sliders to update the background color of box, with the HEX color value in a form control.</p>
+    <p>Change sliders to update the background color of box (note: the box is visually left of the 3 slider controls), with the HEX color value in a form control.</p>
     
     <div role="region" aria-label="Example">
 
