fixed grammar of accessible name

--- a/examples/slider/slider-1.html
+++ b/examples/slider/slider-1.html
@@ -131,7 +131,7 @@
           <td></td>
           <td>aria-labelledby</td>
           <td>thumb</td>
-          <td>Reference to to create a descriptive accessible name for slider</td>
+          <td>Reference to define an accessible name for slider widget</td>
         </tr>
       </tbody>
     </table>
