updated accessible name desc

--- a/examples/slider/slider-1.html
+++ b/examples/slider/slider-1.html
@@ -131,7 +131,7 @@
           <td></td>
           <td>aria-labelledby</td>
           <td>thumb</td>
-          <td>Reference to define a unique description accessible name for each slider widget</td>
+          <td>Reference to define a unique descriptive <em>accessible name</em> for each slider widget</td>
         </tr>
       </tbody>
     </table>
