updated safari/VO desc

--- a/examples/slider/slider-1.html
+++ b/examples/slider/slider-1.html
@@ -179,7 +179,7 @@
           <td>
             <ul>
               <li>Speaks accessible name and the percentage of slider position when thumb receives focus</li>
-              <li>Speaks percentage of slider position as you move focus</li>
+              <li>Speaks percentage of slider position as you increase or decrease the value of the slider</li>
             </ul>  
           </td>
         </tr>
