--- a/aria-practices.html
+++ b/aria-practices.html
@@ -114,7 +114,7 @@
           //preProcess: [ preProc ], 
       };
 </script>
-    <link href="../spec/spec.css" rel="stylesheet" type="text/css"/>
+	<link href="aria-apg.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <section id="abstract">
