Added link to Common ARIA CSS
Also removed Duplicate definitions from the APG CSS

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -114,6 +114,7 @@
           //preProcess: [ preProc ], 
       };
 </script>
+    <link href="../common/css/common.css" rel="stylesheet" type="text/css">
 	<link href="aria-apg.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
