modified:   practices/aria-practices.html: Finished converting design pattern divs to sections. Now, all patterns are listed in the table of contents as sections 2.1 through 2.37.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -910,7 +910,7 @@
     </table>
     </section>
     <hr/>
-<div class="widget" id="grid">
+<section class="widget" id="grid">
       <h3 class="widget-name">Grid (Simple Data Tables)</h3>
     <table cellspacing="0" class="widget-features">
       <caption>
@@ -986,9 +986,9 @@
       </tbody>
     </table>
 
-  </div>
+  </section>
 <hr/>
-<div class="widget" id="sortablegrid">
+<section class="widget" id="sortablegrid">
       <h3 class="widget-name">Actionable, Sortable Column Header in a Grid </h3>
     <table cellspacing="0" class="widget-features">
       <caption>
@@ -1024,10 +1024,9 @@
         </tr>
       </tbody>
     </table>
-
-  </div>
+  </section>
 <hr/>
-    <div class="widget" id="landmarks">
+    <section class="widget" id="landmarks">
       <h3  class="widget-name"> Landmark Navigation </h3>
     <table cellspacing="0" class="widget-features">
       <caption>
@@ -1055,9 +1054,9 @@
         </tr>
       </tbody>
     </table>
-    </div>
+    </section>
     <hr/>
-    <div class="widget" id="link">
+    <section class="widget" id="link">
       <h3 class="widget-name">Link</h3>
       <table cellspacing="0" class="widget-features">
         <caption>
@@ -1092,9 +1091,9 @@
         </tbody>
       </table>
       <p>&nbsp;</p>
-  </div>
+  </section>
     <hr/>
-    <div class="widget" id="Listbox">
+    <section class="widget" id="Listbox">
     <h3 class="widget-name">Listbox</h3>
       <table cellspacing="0" class="widget-features">
         <caption>
@@ -1151,9 +1150,9 @@
           </tr>
         </tbody>
       </table>
-    </div>
+    </section>
     <hr/>
-<div class="widget" id="mediaplayer"><h3 class="widget-name">Media Player</h3>
+<section class="widget" id="mediaplayer"><h3 class="widget-name">Media Player</h3>
     <table cellspacing="0" class="widget-features">
       <caption>
       Characteristics:
@@ -1177,9 +1176,9 @@
         </tr>
       </tbody>
     </table>
-</div>
+</section>
   <hr/>
-<div class="widget" id="menu"><h3 class="widget-name">Menu or Menu bar</h3>
+<section class="widget" id="menu"><h3 class="widget-name">Menu or Menu bar</h3>
     <table cellspacing="0" class="widget-features">
       <caption>
       Characteristics:
@@ -1249,9 +1248,9 @@
         </tr>
       </tbody>
     </table>
-</div>
+</section>
   <hr/>
-<div class="widget" id="menubutton"><h3 class="widget-name">Menu Button</h3>
+<section class="widget" id="menubutton"><h3 class="widget-name">Menu Button</h3>
     <table cellspacing="0" class="widget-features">
       <caption>
       Characteristics:
@@ -1307,9 +1306,9 @@
         </tr>
       </tbody>
     </table>
-</div>
+</section>
   <hr/>
-<div class="widget" id="popupmenu"><h3 class="widget-name">Popup Menu</h3>
+<section class="widget" id="popupmenu"><h3 class="widget-name">Popup Menu</h3>
     <table cellspacing="0" class="widget-features">
       <caption>
       Characteristics:
@@ -1424,9 +1423,9 @@
         </tr>
       </tbody>
     </table>
-</div>
+</section>
   <hr/>
-<div class="widget" id="popuphelp"><h3 class="widget-name">Popup Help (aka Bubble Help)</h3>
+<section class="widget" id="popuphelp"><h3 class="widget-name">Popup Help (aka Bubble Help)</h3>
     <table cellspacing="0" class="widget-features">
       <caption>
       Characteristics:
@@ -1524,9 +1523,9 @@
         </tr>
       </tbody>
     </table>
-</div>
+</section>
   <hr/>
-<div class="widget" id="radiobutton"><h3 class="widget-name">Radio Button</h3>
+<section class="widget" id="radiobutton"><h3 class="widget-name">Radio Button</h3>
     <table cellspacing="0" class="widget-features">
       <caption>
       Characteristics:
@@ -1576,9 +1575,9 @@
         </tr>
       </tbody>
     </table>
-</div>
+</section>
   <hr/>
-<div class="widget" id="richtext"><h3 class="widget-name">Rich Text Editor</h3>
+<section class="widget" id="richtext"><h3 class="widget-name">Rich Text Editor</h3>
     <table cellspacing="0" class="widget-features">
       <caption>
       Characteristics:
@@ -1629,9 +1628,9 @@
         </tr>
       </tbody>
     </table>
-</div>    
+</section>    
  <hr/>
-<div class="widget" id="Site_Navigator_General"><h3 class="widget-name">Site Navigator - General</h3>
+<section class="widget" id="Site_Navigator_General"><h3 class="widget-name">Site Navigator - General</h3>
     <table cellspacing="0" class="widget-features">
       <caption>
       Characteristics:
@@ -1680,9 +1679,9 @@
         </tr>
       </tbody>
     </table>
-</div>
+</section>
   <hr/>
-<div class="widget" id="Site_Navigator_Tree"><h3 class="widget-name">Site Navigator - Tree</h3>
+<section class="widget" id="Site_Navigator_Tree"><h3 class="widget-name">Site Navigator - Tree</h3>
     <table cellspacing="0" class="widget-features">
       <caption>
       Characteristics:
@@ -1723,9 +1722,9 @@
         </tr>
       </tbody>
     </table>
-</div>
+</section>
   <hr/>
-<div class="widget" id="Site_Navigator_Tabbed_Style"><h3 class="widget-name">Site Navigator - Tabbed Style</h3>
+<section class="widget" id="Site_Navigator_Tabbed_Style"><h3 class="widget-name">Site Navigator - Tabbed Style</h3>
     <table cellspacing="0" class="widget-features">
       <caption>
       Characteristics:
@@ -1796,9 +1795,9 @@
         </tr>
       </tbody>
     </table>
-</div>
+</section>
   <hr/>
-<div class="widget" id="slider">
+<section class="widget" id="slider">
       <h3 class="widget-name">Slider</h3>
       <table cellspacing="0" class="widget-features">
         <caption>
@@ -1845,9 +1844,9 @@
           </tr>
         </tbody>
       </table>
-  </div>
+  </section>
     <hr/>
-    <div class="widget" id="slidertwothumb">
+    <section class="widget" id="slidertwothumb">
       <h3 class="widget-name">Slider (Multi-Thumb)</h3>
       <table cellspacing="0" class="widget-features">
         <caption>
@@ -1903,9 +1902,9 @@
         </tbody>
       </table>
 
-</div>
+</section>
 <hr/>
-  <div class="widget" id="spinbutton">
+  <section class="widget" id="spinbutton">
     <h3 class="widget-name">Spinbutton</h3>
     <table cellspacing="0" class="widget-features">
       <caption>
@@ -1951,9 +1950,9 @@
         </tr>
       </tbody>
     </table>
-  </div>
+  </section>
   <hr/>
-  <div class="widget" id="tabpanel">
+  <section class="widget" id="tabpanel">
     <h3 class="widget-name">Tab Panel</h3>
          <table cellspacing="0" class="widget-features">
           <caption>
@@ -2011,9 +2010,9 @@
             </tr>
           </tbody>
         </table>
-  </div>
+  </section>
       <hr/>
-  <div class="widget" id="toolbar">
+  <section class="widget" id="toolbar">
     <h3 class="widget-name">Tool Bar</h3>
     <table cellspacing="0" class="widget-features">
       <caption>
@@ -2064,9 +2063,9 @@
         </tr>
       </tbody>
     </table>
-  </div>
+  </section>
   <hr/>
-  <div class="widget" id="tooltip">
+  <section class="widget" id="tooltip">
     <h3 class="widget-name">Tooltip Widget</h3>
      <table cellspacing="0" class="widget-features">
       <caption>
@@ -2104,9 +2103,9 @@
         </tr>
       </tbody>
     </table>
- </div>
+ </section>
   <hr/>
-  <div class="widget" id="treegrid">
+  <section class="widget" id="treegrid">
     <h3 class="widget-name">Tree Grid</h3>
     <table cellspacing="0" class="widget-features">
     <caption>
@@ -2197,9 +2196,9 @@ Characteristics:
       </tr>
     </tbody>
     </table>
-  </div>
+  </section>
   <hr/>
-  <div class="widget" id="TreeView">
+  <section class="widget" id="TreeView">
 		<h3 class="widget-name">Tree View</h3>
   	<table class="widget-features" cellspacing="0">
 			<caption>
@@ -2282,9 +2281,9 @@ Characteristics:
 				</tr>
 			</tbody>
 		</table>
-  	</div>
+  	</section>
   <hr/>
-  <div class="widget" id="windowsplitter">
+  <section class="widget" id="windowsplitter">
     <h3 class="widget-name">Window Splitter</h3>
      <table cellspacing="0" class="widget-features">
       <caption>
@@ -2337,9 +2336,9 @@ Characteristics:
         </tr>
       </tbody>
     </table>
- </div>
+ </section>
   <hr/>
-  <div class="widget" id="wizard">
+  <section class="widget" id="wizard">
     <h3 class="widget-name">Wizard</h3>
      <table cellspacing="0" class="widget-features">
       <caption>
@@ -2385,7 +2384,7 @@ Characteristics:
         </tr>
       </tbody>
     </table>
- </div>
+ </section>
 </section>
 <section id="ariaBackground">
     <h2>Background on WAI-ARIA</h2>
