--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US">
 <head>
-	<title>WAI-ARIA 1.1 Authoring Practices</title>
+	<title>WAI-ARIA Authoring Practices 1.1</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <script src="https://www.w3.org/Tools/respec/respec-w3c-common" class="remove"></script>
     <script class="remove">
