--- a/aria-practices.html
+++ b/aria-practices.html
@@ -131,19 +131,18 @@
 <section id="intro">
   <h2> Introduction</h2>
   <p>This section is <em>informative.</em></p>
-  <p>The WAI-ARIA Authoring Practices Guide is intended to provide readers with an understanding of how to use WAI-ARIA to create an accessible Rich Internet Application. As explained in <a href="#ariaBackground">Background on WAI-ARIA</a>, 
+  <p>The WAI-ARIA Authoring Practices Guide is intended to provide an understanding of how to use WAI-ARIA to create an accessible Rich Internet Application. As explained in <a href="#ariaBackground">Background on WAI-ARIA</a>, 
     languages used to create rich and dynamic web sites, e.g., HTML, Javascript, CSS, and SVG, do not natively include all the features required to make sites usable by people who use assistive technologies (AT) or who rely on keyboard navigation. The W3C Web Accessibility Initiative's (WAI) Protocols and Formats working group (PFWG) is addressing these deficiencies through several W3C standards efforts, with a focus on the WAI-ARIA specifications. For an introduction to WAI-ARIA, see the <a href="http://www.w3.org/WAI/intro/aria.php">Accessible Rich Internet   Applications Suite (WAI-ARIA) Overview</a>. 
   </p>
   <p>The WAI-ARIA Authoring Practices Guide describes recommended WAI-ARIA usage patterns for web content developers and provides an introduction to the concepts behind them. This guide is one part of a suite of resources that support the WAI-ARIA specification. The WAI-ARIA suite fills accessibility gaps identified by the [[WAI-ARIA-ROADMAP]].
   </p> 
-  <p>With the understanding many readers prefer to learn from examples, the guide begins with a section that demonstrates how to make common widgets accessible with descriptions of expected behaviors supported by working code.
+  <p>With the understanding many prefer to learn from examples, the guide begins with a section that demonstrates how to make common widgets accessible with descriptions of expected behaviors supported by working code.
   Where it is helpful to do so, the examples refer to detailed explainations of supporting concepts in subsequent sections.
-  Those sections that follow the examples first provide background on WAI-ARIA that help the reader understand how WAI-ARIA works and how it fits into the larger web technoloby picture.
+  The sections that follow the examples first provide background that helps build understanding of how WAI-ARIA works and how it fits into the larger web technoloby picture.
   Next, the guide covers general steps for building an accessible widget  using WAI-ARIA, JavaScript, and CSS, including detailed guidance on how to make rich internet applications keyboard accessible. 
   The scope then widens to include the full application, addressing the page layout and structural semantics critical to enabling a usable experience with assistive technologies on pages containing both rich applications and rich documents. 
   It includes guidance on dynamic document management, use of WAI-ARIA Form properties, and the creation of WAI-ARIA-enabled alerts and dialogs. 
   </p>
-  <p class="note">WAI-ARIA markup is currently not included in (X)HTML. The W3C WAI PF working   group will be creating DTDs for XHTML 1.0 and HTML 4.01 for those wishing to   validate their markup with WAI-ARIA embedded into these host languages. </p>
   </section>
 <section id="aria_ex">
   <h2>Design Patterns</h2>
