Updated screen reader implementation support

--- a/examples/slider/slider-1.html
+++ b/examples/slider/slider-1.html
@@ -155,21 +155,37 @@
           <td>11</td>
           <td>JAWS</td>
           <td>15</td>
-          <td></td>
+          <td>
+            <ul>
+              <li>Focus: Speaks accessible name and the percentage of slider position when thumb receives focus</li>
+              <li>Value Change: Speaks percentage of slider position as you increase or decrease the value of the slider</li>
+            </ul>  
+          </td>
         </tr>
         <tr>
           <td>Firefox</td>
           <td>36</td>
           <td>NVDA</td>
           <td>2105.1</td>
-          <td></td>
+          <td>
+            <ul>
+              <li>Focus: Speaks accessible name, "slider', valuenow.</li>
+              <li>Value Change: Speaks valuenow.</li>
+              <li>No information on minimum or maximum values.</li>
+            </ul>  
+          </td>
         </tr>
         <tr>
           <td>Chrome</td>
           <td></td>
           <td>Chromevox</td>
           <td></td>
-          <td></td>
+          <td>
+            <ul>
+              <li>Focus: Speaks accessible name, "slider', valuenow + 'minutes' and then the minimum and maximum values.</li>
+              <li>Value Change: Speaks valuenow + 'minutes' and then the minimum and maximum values.</li>
+            </ul>  
+          </td>
         </tr>
         <tr>
           <td>Safari</td>
@@ -178,8 +194,8 @@
           <td></td>
           <td>
             <ul>
-              <li>Speaks accessible name and the percentage of slider position when thumb receives focus</li>
-              <li>Speaks percentage of slider position as you increase or decrease the value of the slider</li>
+              <li>Focus: Speaks accessible name and the percentage of slider position when thumb receives focus</li>
+              <li>Value Change: Speaks percentage of slider position as you increase or decrease the value of the slider</li>
             </ul>  
           </td>
         </tr>
