Updated chrome information

--- a/examples/slider/slider-1.html
+++ b/examples/slider/slider-1.html
@@ -176,7 +176,7 @@
           </td>
         </tr>
         <tr>
-          <td>Chrome</td>
+          <td>Chrome for Windows</td>
           <td>42.0.2331.90 m</td>
           <td>Chromevox</td>
           <td>43.0.2314.0</td>
